--- a/ModularFluids/ModularFluids.vcxproj
+++ b/ModularFluids/ModularFluids.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="framework.h" />
     <ClInclude Include="ModularFluids.h" />
   </ItemGroup>
   <ItemGroup>
