--- a/ModularFluids/ModularFluids.vcxproj.filters
+++ b/ModularFluids/ModularFluids.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="ModularFluids.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="framework.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
