--- a/ModularFluids/ModularFluids.vcxproj
+++ b/ModularFluids/ModularFluids.vcxproj
@@ -151,12 +151,14 @@
     <ClInclude Include="ModularFluids.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="ResourceManager.h" />
+    <ClInclude Include="ShaderManager.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="ModularFluids.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
+    <ClCompile Include="ShaderManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="ModularFluids.rc" />
